syntax = "proto3";

option csharp_namespace = "GrpcServer";

package shapesAnalyzer;

service ShapesAnalyzer {
	rpc IsTriangleOk (TriangleSides) returns (IsTriangle);
	rpc GetTriangleSurface (TriangleSides) returns (Surface);
	rpc GetTrianglePerimeter (TriangleSides) returns (Perimeter);
	rpc IsTriangleRightAngle (TriangleSides) returns (IsRightAngle);
	rpc IsTriangleIsosceles (TriangleSides) returns (IsIsosceles);
}

message TriangleSides {
	double a = 1;
	double b = 2;
	double c = 3;
}

message IsTriangle {
	bool message = 1;
	string triangle = 2;
}

message Perimeter {
	double p = 1;
}

message Surface {
	double size = 1;
}

message IsRightAngle {
	bool message = 1;
}

message IsIsosceles {
	bool message = 1;
}